--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
+# ignore the secret key
+gcp_key.json
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
 
 # C extensions
-*.so
+*.so 
 
 # Distribution / packaging
 .Python
@@ -160,3 +164,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+gcp_key.json
